# Quantum-Optical-Bus-Simulation

./: .gitignore  AGENTS.md  Makefile  README.md  generate_gallery.py  pyproject.toml  simulation.py  squeezed_light.py
.github/workflows/: ci.yml
data/examples/: calibration_sample.csv  squeezing_sample.csv
docs/: ROADMAP.md  data_schema.md
scripts/: generate_advanced_dashboard_gallery.py  generate_calibration_demo.py  generate_dashboard_gallery.py  generate_demo_gif.py  run_digital_twin_demo.py
src/quantum_optical_bus/: __init__.py  calibration_app.py  compat.py  control.py  estimation.py  hardware.py  interface.py  multimode.py  quantum.py  tdm_topology.py  units.py
tests/: test_core.py  test_digital_twin.py  test_tdm_topology.py  test_units.py
