[project]
name = "quantum-optical-bus-simulation"
version = "0.1.0"
description = "A modern physics simulation using marimo and uv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "strawberryfields",
    "streamlit",
]

[project.optional-dependencies]
# Meep requires conda or Linux
full = ["meep"]
test = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
